<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@android:color/background_light">


    <TextView
        android:id="@+id/termNameTextView"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:text="Fall 2016"/>

<!-- Units text -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/termUnitsLinearLayout"
        android:layout_below="@id/termNameTextView"
        android:layout_alignParentLeft="true"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_units"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/termUnitsTextView"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:textSize="20dp"/>
    </LinearLayout>
<!-- GPA text -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/termGPALinearLayout"
        android:layout_below="@id/termNameTextView"
        android:layout_toRightOf="@id/termUnitsLinearLayout"
        android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_GPA"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/termGPATextView"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:maxLength="4" />
    </LinearLayout>


    <Button
        android:id="@+id/removeTermButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/remove_button"
        android:layout_alignParentEnd="true"
        />



    <!-- bottom border -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_alignParentBottom="true"/>

    <!-- Right border -->
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:layout_alignParentStart="true"/>

    <!-- left border -->
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>